fix to notification copy alignment in win + ff

--- a/src/modules/notifications/less/notification.less
+++ b/src/modules/notifications/less/notification.less
@@ -21,6 +21,11 @@
     justify-content: flex-start;
     padding: 0.2em 0 0.2em 0.4em;
 
+    .notification-title,
+    .notification-description {
+      text-align: left;
+    }
+
     .notification-title {
       .font-weight-normal();
 
